--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">    
     <link rel="icon" type="image/png" href="{% static 'image/background/favicon_logo.png' %}">
     {% block title %}
-    <title>Sujin Lee - Creative Developer</title>
+    <title>Sujin Lee - Creative Technologist</title>
     {% endblock %}
     <!-- meta tags -->
     <meta property="fb:app_id" content="1081681621896558" />
@@ -19,7 +19,7 @@
     <meta property="og:author" content="https://www.facebook.com/sujinlee.me" />
     {% block ogtags %}
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Creative Developer" />
+    <meta property="og:description" content="Creative Technologist" />
     <meta property="og:image"content="https://www.sujinlee.me/static/image/background/profile-about.png" />
     <meta property="og:url" content="https://www.sujinlee.me/" />
     {% endblock %}
