--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -4,7 +4,7 @@
 {% block ogtags %}
 <meta property="og:type"   content="website" /> 
 <meta property="og:title" content="Sujin Lee" />
-<meta property="og:description" content="Creative Developer" />
+<meta property="og:description" content="Creative Technologist" />
 <meta property="og:image" content="https://www.sujinlee.me/image/background/profile-about.png" />
 <meta property="og:url" content="https://www.sujinlee.me/" />
 {% endblock %}
