--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -8,7 +8,7 @@
 
 {% block ogtags %}
 <meta property="og:type"   content="article" /> 
-<meta property="og:title" content="{{ project.title }} - Sujin Lee" />
+<meta property="og:title" content="{{ project.title }}" />
 <meta property="og:description" content="{{ project.summary|truncatechars:230 }}" />
 <meta property="og:image" content="https://www.sujinlee.me/{{ project.image.url }}" />
 <meta property="og:url" content="https://www.sujinlee.me/blog/{{project.slug }}/" />
