--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -19,7 +19,7 @@
 </div>
   <div class="home_title">
     <h1>Sujin <mark>Lee</mark></h1>
-    <h2>Creative Developer</h2>
+    <h2>Creative Technologist</h2>
     <h3>Living in Seoul, Korea</h3>
     <h3>Who loves Web and Music Collaboration</h3>
   </div>
