--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Sujin Lee | Creative Developer">
+    <meta name="description" content="Sujin Lee | Creative Technologist">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">    
     <link rel="icon" type="image/png" href="{% static 'image/background/favicon_logo.png' %}">
