Update Main Page

--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -21,7 +21,7 @@
     <h1>Sujin <mark>Lee</mark></h1>
     <h2>Creative Technologist</h2>
     <h3>Living in Seoul, Korea</h3>
-    <h3>Who loves Web and Music Collaboration</h3>
+    <h3>Who loves Web and Art Collaboration</h3>
   </div>
   <!--<div class="straight_line"></div>-->
 {% endblock %}
