--- a/myblog/static/src/scss/text.scss
+++ b/myblog/static/src/scss/text.scss
@@ -104,10 +104,12 @@ h1,
 h2 {
   font-weight: 700;
   text-transform: uppercase;
+  letter-spacing: 0.04rem;
 }
 
 h3 {
   font-weight: 600;
+  letter-spacing: 0.04rem;
 }
 
 strong {
@@ -205,7 +207,7 @@ strong {
   }
   p,
   pre {
-    margin-bottom: $page_margin / 3;
+    margin-bottom: $page_margin / 3;          
   }
   p,
   blockquote,
@@ -217,6 +219,7 @@ strong {
     line-height: 2rem;
     vertical-align: middle;
     font-family: 'NanumSquare', monospace;
+    letter-spacing: 0.04rem;
   }
   blockquote,
   ul,
@@ -478,11 +481,10 @@ strong {
     background-color: transparent;
     border: none;
     font-family: 'Source Code Pro', 'NanumSquare', monospace;
+    letter-spacing: 0.04rem;
+    font-size: 0.9rem;
   }
   .post_body {
-    .ko {
-      font-family: 'NanumSquare', monospace !important;
-    }
     ul {
       list-style-type: initial !important;
     }
@@ -516,9 +518,6 @@ strong {
   font-size: 2rem;
   line-height: 2rem;
   letter-spacing: 0.1rem;
-}
-
-.post_title h1 {
   text-align: center;
   letter-spacing: 0.1rem;
   font-size: 2rem;
