--- a/myblog/static/src/scss/index.scss
+++ b/myblog/static/src/scss/index.scss
@@ -40,8 +40,11 @@ $txt_margin: 4%;
     font-size: 1.3rem;
     margin-bottom: $txt_margin / 2;
     font-weight: 500;
+    letter-spacing: 0.01rem;
   }
 }
+
+
 
 
 /* Smartphones (portrait and landscape) ----------- */
