--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -12,11 +12,11 @@
 <meta property="og:description" content="{{ post.summary|truncatechars:230 }}" />
 <meta property="og:image" content="https://www.sujinlee.me/{{ post.image.url }}" />
 <meta property="og:url" content="https://www.sujinlee.me/blog/{{post.slug }}/" />
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.8.3/katex.min.css" integrity="sha384-B41nY7vEWuDrE9Mr+J2nBL0Liu+nl/rBXTdpQal730oTHdlrlXHzYMOhDU60cwde" crossorigin="anonymous">
 {% block stylesheet %}
 <script id="dsq-count-scr" src="//sujinlee.disqus.com/count.js" async></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/contrib/auto-render.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.8.3/katex.min.js" integrity="sha384-L9gv4ooDLrYwW0QCM6zY3EKSSPrsuUncpx26+erN0pJX4wv1B1FzVW1SvpcJPx/8" crossorigin="anonymous"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.8.3/contrib/auto-render.min.js" integrity="sha384-RkgGHBDdR8eyBOoWeZ/vpGg1cOvSAJRflCUDACusAAIVwkwPrOUYykglPeqWakZu" crossorigin="anonymous"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jsxgraph/0.99.3/jsxgraphcore.js"></script>
 {% endblock %}
 {% endblock %}
@@ -36,9 +36,9 @@
   </picture>
   <header class="post_title">
     <h1>{{ post.title }}</h1>
-    {% if post.published_date %}
+    {% if post.created_date %}
     <span class="date">
-    {{ post.published_date }}
+    {{ post.created_date|date:"M. d. Y"}}
     </span>
   </header>
   {% endif %}
@@ -123,16 +123,21 @@
 <script src="{% static 'src/js/post_detail.js' %}"></script>
 <script>
 hljs.initHighlightingOnLoad();
-window.onload = loadPreImage().then().renderMathInElement(
+window.onload = loadPreImage();
+renderMathInElement(
   document.body,
   {
-    delimiters: [
-      {left: "$$", right: "$$", display: true},
-      {left: "\\[", right: "\\]", display: true},
-      {left: "$", right: "$", display: true},
-      {left: "\\(", right: "\\)", display: true},
-      {left: "\\", right: "\\)", display: true}
-    ]
+      delimiters: [
+          {left: "$$", right: "$$", display: true},
+          {left: "\\[", right: "\\]", display: true},
+          {left: "$", right: "$", display: false},
+          {left: "\\(", right: "\\)", display: true},
+          {left: "\\", right: "\\)", display: true},
+
+      ],
+      ignoredTags: [
+      "script", "noscript", "style", "textarea", "pre", "code"
+      ]
   }
 );
 </script>
