--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -27,7 +27,7 @@
         <header>
           <div class="detail">
             <div class="blog_title">
-              <span class="date">{{ post.published_date }}</span>                
+              <span class="date">{{ post.created_date|date:"M. d. Y" }}</span>                
               <h2>{{ post.title|truncatechars:50 }}</h2>
               <h3>{{ post.summary|truncatechars:70 }}</h3> 
             </div>           
